<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_degradado"
    android:orientation="vertical"
    tools:context=".Registro">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="60dp"
        app:srcCompat="@android:drawable/ic_menu_add" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <EditText
            android:id="@+id/et_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColorHint="@color/white"
            android:hint="@string/registro_hint_nombre"/>

        <EditText
            android:id="@+id/et_correo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColorHint="@color/white"
            android:hint="@string/registro_hint_correo"
            android:layout_marginTop="16dp"/>

        <EditText
            android:id="@+id/et_contraseña"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColorHint="@color/white"
            android:hint="@string/registro_hint_contraseña"
            android:layout_marginTop="16dp"/>

        <EditText
            android:id="@+id/et_confirmar_contraseña"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColorHint="@color/white"
            android:hint="@string/registro_hint_confirmar_contraseña"
            android:layout_marginTop="16dp"/>

        <TextView
            android:id="@+id/tv_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_red_light"
            android:textStyle="bold"
            android:textSize="24sp"
            android:textAlignment="center"
            android:visibility="invisible"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp" />

        <Button
            android:id="@+id/btn_registrate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registro_btn_registrarse"
            android:textStyle="bold"
            android:textSize="20sp"
            android:background="@drawable/boton"
            android:layout_marginTop="16dp"/>

        <Button
            android:id="@+id/btn_volver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registro_btn_volver"
            android:textStyle="bold"
            android:textSize="20sp"
            android:background="@drawable/boton"
            android:layout_marginTop="16dp"/>
    </LinearLayout>

</LinearLayout>